[package]
name = "slip-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { version = "0.1", default-features = false }

hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }
generic-array = "0.14"

serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
std = []
curve-secp256k1 = ["generic-ec/curve-secp256k1"]
curve-secp256r1 = ["generic-ec/curve-secp256r1"]
all-curves = ["curve-secp256k1", "curve-secp256r1"]
serde = ["dep:serde", "generic-ec/serde"]

[[test]]
name = "test_vectors"
required-features = ["all-curves"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
