[package]
name = "hd-wallet"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HD wallets derivation"
repository = "https://github.com/LFDT-Lockness/hd-wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { version = "0.4", default-features = false }

hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }
generic-array = "0.14"

serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
rand = "0.8"

[features]
std = []
curve-secp256k1 = ["generic-ec/curve-secp256k1"]
curve-secp256r1 = ["generic-ec/curve-secp256r1"]
curve-ed25519 = ["generic-ec/curve-ed25519"]
all-curves = ["curve-secp256k1", "curve-secp256r1"]
serde = ["dep:serde", "generic-ec/serde"]

[[test]]
name = "slip10_test_vector"
required-features = ["curve-secp256k1", "curve-secp256r1"]

[[test]]
name = "edwards_test_vector"
required-features = ["curve-ed25519"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
